<resources>
    <string name="app_name">HabitFlow</string>

    <string name="fab_description">Переход на другой экран</string>

    <string name="ed_habit">Your new habit</string>
    <string name="ed_importance">Why this habit is important for you?</string>
    <string name="ed_reward">How will you reward yourself?</string>
    <string name="ed_category">Category</string>
    <string name="sure">Are you sure that you want to delete the habit?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>


    <string name="imagebutton_description">Выполнение привычки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="nameOfApp">"HabitFlow"</string>
    <string name="NotLogin">"Not yet registered? Sign Up"</string>
    <string name="AlreadyLog">"Already has an account? Login"</string>
    <string name="doublePassword">"Confirm Password"</string>
    <string name="signup">"SIGN UP"</string>
    <string name="empty">"Empty"</string>
    <string name="edit">"Edit"</string>
    <string name="addPhoto">"Add photo"</string>


    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="title_activity_compose_lesson">ComposeLesson</string>

</resources>