<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/edReward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_background"
        android:backgroundTint="@color/dark_bg"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/ed_reward"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/edHabit"
        app:layout_constraintStart_toStartOf="@+id/edHabit"
        app:layout_constraintTop_toBottomOf="@+id/edImportance" />

    <EditText
        android:id="@+id/edImportance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_background"
        android:backgroundTint="@color/dark_bg"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/ed_importance"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/material_dynamic_neutral100"
        android:textColorHint="@color/material_dynamic_neutral100"
        app:layout_constraintEnd_toEndOf="@+id/edHabit"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/edHabit"
        app:layout_constraintTop_toBottomOf="@+id/edHabit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/fab_description"
        android:onClick="onClickSave"
        android:src="@drawable/ic_savehab"
        app:backgroundTint="#101010"
        app:layout_constraintEnd_toEndOf="@+id/edCategory"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edHabit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ic_background"
        android:backgroundTint="@color/dark_bg"
        android:ems="10"
        android:hint="@string/ed_habit"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/material_dynamic_neutral100"
        android:textColorHint="@color/design_default_color_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/edCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_background"
        android:backgroundTint="@color/dark_bg"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/ed_category"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/edHabit"
        app:layout_constraintStart_toStartOf="@+id/edHabit"
        app:layout_constraintTop_toBottomOf="@+id/edReward" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:clickable="true"
        android:onClick="onClickBack"
        app:backgroundTint="#101010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="248dp"
        android:layout_height="202dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="@+id/edHabit"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/edHabit"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbAddImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:onClick="onClickChooseImage"
            android:src="@drawable/ic_camera"
            app:backgroundTint="#1C1C1C"
            app:layout_constraintBottom_toBottomOf="@+id/imMainImage"
            app:layout_constraintEnd_toEndOf="@+id/imMainImage"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="@+id/imMainImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811" />

        <ImageView
            android:id="@+id/imMainImage"
            android:layout_width="207dp"
            android:layout_height="164dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_background"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:text="@string/addPhoto"
            android:textColor="@color/orange_use"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>